# age-rs

./: .gitignore  .gitmodules  COPYING.md  Cargo.toml  README.md  bors.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: rust.yml
crates/libnyan-rs/: Cargo.toml
crates/libopenage-rs/: Cargo.toml
doc/: bors.md  building.md  contributing.md
libnyan-rs/: Cargo.toml  build.rs
libopenage-rs/: Cargo.toml
