[package]
name = "libnyan-rs"
version = "0.1.0"
edition = "2018"
authors = ["the age-rs authors"]
description = "Modding API with a typesafe hierarchical key-value database with inheritance and dynamic patching"
repository = "https://github.com/age-rs/age-rs"
documentation = "https://docs.rs/age-rs/libnyan-rs"
readme = "README.md"
keywords = ["age of empires", "rts", "gamedev", "crossplatform"]
categories = ["game engine"]
license = "GPL-3.0-or-later"

include = [
    "Cargo.toml",
    "../LICENSE",
    "../COPYING.md",
    "../Readme.md",
]

[dependencies]

[build-dependencies]
bindgen = "0.59.1"

[lib]
name = "libnyan_rs"
#crate-type = ["staticlib", "cdylib", "rlib", "dylib"]
crate-type = ["rlib"]
path = "src/lib.rs"
test = true
doc = true

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "0.7.1"

[package.metadata.release]
upload-doc = true
no-dev-version = true
pre-release-commit-message = "Release {{crate_name}} {{version}} / {{date}}"
